--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   google_sign_in: ^4.0.7
   firebase_auth: ^0.14.0+5
+  provider: ^3.1.0+1
 
 
 dev_dependencies:
