--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_sign_in: ^4.0.7
   firebase_auth: ^0.14.0+5
   provider: ^3.1.0+1
+  fluttertoast: ^7.1.5
 
 
 dev_dependencies:
