--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
 
   cupertino_icons: ^1.0.1
-  google_sign_in: ^4.0.7
-  firebase_auth: ^0.14.0+5
+
+
   provider: ^3.1.0+1
   fluttertoast: ^7.1.5
+  firebase_auth: ^0.14.0+5
+  cloud_firestore: ^0.13.5
+
 
 
 dev_dependencies:
