--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   fluttertoast: ^7.1.5
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.13.5
-
+  image_picker: ^0.6.7+14
 
 
 dev_dependencies:
@@ -56,6 +56,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/google-logo.png
+    - images/Equinox Logo-02 4.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
