--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.13.5
   image_picker: ^0.6.7+14
+  google_fonts: ^1.1.1
 
 
 dev_dependencies:
